k3s/apps/n8n/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: apps
spec:
  ingressClassName: ngrok
  rules:
    - host: "relevant-finch-dynamic.ngrok-free.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
